chore(doc): typo

--- a/doc/main.tex
+++ b/doc/main.tex
@@ -201,7 +201,7 @@ Při evaluaci třídou \textit{TestTrecEval.java} bylo dosaženo následujícíc
     \item \textit{MAP} pri vyhledání spojením \texttt{Topic::getTitle} a \texttt{Topic::getDescription} - \(0.1173\)
 \end{itemize}
 
-Nejlepší výsledek tedy dosáhla evaluace povyhledáváním \texttt{Topic::getTitle} a \texttt{Topic::getNarrative}. Celý výstup lze vidět na obrázku \ref{fig:trec-eval}.
+Nejlepší výsledek tedy dosáhla evaluace vyhledáváním \texttt{Topic::getTitle} a \texttt{Topic::getNarrative}. Celý výstup lze vidět na obrázku \ref{fig:trec-eval}.
 
 \begin{figure}[!h]
     \centering
